# validation-selective

./: .travis.yml  CHANGELOG.md  README.md  appveyor.yml  cabal.project  stack.yaml  validation-selective.cabal
.github/workflows/: ci.yml
src/: Validation.hs  Validation.hs-boot  ValidationSelective.hs
src/Validation/: Combinators.hs
test/: Doctest.hs  Spec.hs
test/Test/: Gen.hs  Laws.hs  Properties.hs  Property.hs
